--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 python = ">=3.8,<4.0"
 einops = "0.3.2"
 ftfy = "^6.1.1"
-hydra-core = "1.0.5"
+hydra-core = ">=1.0.5"
 matplotlib = "^3.7.1"
 pandas = "1.4.1"
 regex = "^2023.6.3"
