--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ pandas = "1.4.1"
 regex = "^2023.6.3"
 tensorboard = "^2.13.0"
 perceiver-pytorch = "^0.8.7"
+transformers = "^4.21"
+
 
 
 [tool.poetry.extras]
